--- a/askar-crypto/Cargo.toml
+++ b/askar-crypto/Cargo.toml
@@ -72,5 +72,5 @@ serde = { version = "1.0", default-features = false, features = ["derive"] }
 serde-json-core = { version = "0.5", default-features = false }
 subtle = "2.4"
 sha2 = { version = "0.10", default-features = false }
-x25519-dalek = { version = "=1.1", default-features = false, features = ["u64_backend"], optional = true }
-zeroize = { version = "1.4", features = ["zeroize_derive"] }
+x25519-dalek = { version = "1.1", default-features = false, features = ["u64_backend"], optional = true }
+zeroize = { version = "1", features = ["zeroize_derive"] }
